fixed button off screen in Projects

--- a/css/index.css
+++ b/css/index.css
@@ -172,6 +172,10 @@ section{
   color: #fff;
 }
 
+.btnM{
+  margin-top: 10px;
+}
+
 .projects{
   height: 100%;
   width: 100%;
